# simple-lists

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
app/: __init__.py  auth.py  config.py  models.py  pwa.py  rate_limit.py  security.py
app/routes/: host.py  list_view.py  public.py
app/static/: app.js  manifest.webmanifest  style.css  sw.js
app/templates/: base.html  index.html
app/templates/host/: dashboard.html  import.html  list_edit.html  login.html
app/templates/list/: password.html  view.html
app/templates/partials/: install_hint.html  list_items.html
